chore: update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # 환경 설정 파일 (Visual Studio Code 등)
 .vscode/
